wip - upgrading dependencies